[gd_scene load_steps=10 format=3 uid="uid://dq40f865fm6bg"]

[ext_resource type="Script" path="res://格子/gameButton.gd" id="1_grq6p"]
[ext_resource type="Texture2D" uid="uid://dxa3mv6uwol1k" path="res://资源/图片/stone.png" id="2_32uhl"]
[ext_resource type="Texture2D" uid="uid://dmcn5hjkk3hoa" path="res://资源/图片/stone_select.png" id="3_5twe8"]
[ext_resource type="Texture2D" uid="uid://cybkrlul5fann" path="res://资源/图片/stone_mark.png" id="4_1iby6"]
[ext_resource type="Texture2D" uid="uid://cqbnqd4jgis83" path="res://资源/图片/bedrock.png" id="4_wts8v"]
[ext_resource type="Texture2D" uid="uid://deb1eq74nr1pr" path="res://资源/图片/diamond.png" id="5_ha40e"]
[ext_resource type="Texture2D" uid="uid://cbpn4qt4ssk7g" path="res://资源/图片/stone_mark_select.png" id="5_icxrj"]
[ext_resource type="FontFile" uid="uid://bguvkrr3jsiwi" path="res://资源/字体/minecraft.woff" id="8_6ponf"]

[sub_resource type="LabelSettings" id="LabelSettings_ua7dh"]
line_spacing = 0.0
font = ExtResource("8_6ponf")
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 0

[node name="gameButton" type="Control"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_grq6p")

[node name="Stone" type="Sprite2D" parent="."]
texture = ExtResource("2_32uhl")
centered = false

[node name="Stone_select" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_5twe8")
centered = false

[node name="Stone_mark" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_1iby6")
centered = false

[node name="Stone_mark_select" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_icxrj")
centered = false

[node name="Bedrock" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_wts8v")
centered = false

[node name="Diamond" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_ha40e")
centered = false

[node name="Button" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
label_settings = SubResource("LabelSettings_ua7dh")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
